Fixed an alignment issue and the sending of blank messages.
Fixed an alignment issue with the default and terminal themes and
prevented the sending of a blank string.

--- a/yaircc/Themes/default.css
+++ b/yaircc/Themes/default.css
@@ -34,6 +34,11 @@ body, tr, tbody, table {
 	white-space: pre-wrap;
 }
 
+.payload span 
+{
+	vertical-align: top;
+}
+
 .timestamp {
 	font-style: normal !important;
 	vertical-align: top;
